TWI-16 Create new Tweet
Create new tweet and check values
